# Bank-loan-prediction

./: Présentation .ipynb  README.md  pyproject.toml  requirements.txt
Credit_app/App_deploiment/: app.py
Credit_app/App_deploiment/templates/: index.html
Notebooks/: EDA.ipynb  data_cleaning.ipynb  model.pkl  model.pkl1  preprossed_ML.ipynb  resultat.csv
cleaning_preprocess/: cleaning.py
cleaning_preprocess_ML/: cleaning.py
dataset/: data_cleaned.csv
